# overdraw

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  eslint.config.mjs  ff.sh  ff2.sh  kake.sh  kitties.sh  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
core/src/: main.cpp
docs/: architecture.md  build-order.md  canvas-design.md  core-plugin-api.md  cursor-design.md  customization.md  decoration-as-intercept.md  drm-design.md  hidpi-design.md  intercept-design.md  multi-output-design.md  protocol-coverage.md  scanout-design.md  status-detailed.md  status.md  subsurface-follow-refactor.md  wayland-event-loop-watcher.md  wire-ordering-abstraction.md  xwayland-design.md
examples/decorations/: animated-gradient.mjs  config.mjs  superellipse.mjs
examples/hotkeys/: config.mjs
examples/layout/: config.mjs
examples/window-animations/: config.mjs  plugin.mjs
examples/wm-actions/: config.mjs
examples/xwayland/: config.mjs
gpu-process/src/: allocator.cpp  allocator.h  event_loop.h  host_window.cpp  host_window.h  main.cpp
native/core/: compositor.cpp  compositor.h  gpu_process.cpp  gpu_process.h  input.h  input_wayland.cpp  input_wayland.h  plugin_wire.cpp  plugin_wire.h  shm.cpp  shm.h  wire_link.cpp  wire_link.h
native/ipc/: side_channel.h  transport.h  wire_barrier.h
native/napi/: addon.cpp
native/plugin-napi/: addon.cpp  worker_wire.cpp  worker_wire.h
native/wayland/: interface_registry.cpp  keymap.cpp  server.h  trampoline.cpp  trampoline.h  wayland_fd.cpp  wayland_fd.h
scripts/: run-gpu-tests.mjs
src/: decorations.ts  index.js  main.ts  overlay.ts  query.ts  subsurfaces.ts  types.ts
src/config/: load.ts  types.ts
src/events/: types.ts  window-bus.ts
src/gpu/: compositor.ts
src/ipc/: protocol.ts
src/plugins/: action-registry.ts  actions.ts  bootstrap.ts  decoration-broker.ts  decorations.ts  events.ts  gpu-broker.ts  gpu.ts  protocol.ts  runtime.ts  sdk.ts  window-observer.ts  windows-broker.ts  windows-sdk.ts
src/protocols/: ctx.ts  index.js  index.ts  window-changes.ts  wl_buffer.js  wl_buffer.ts  wl_compositor.js  wl_compositor.ts  wl_data_device_manager.ts  wl_region.js  wl_region.ts  wl_seat.js  wl_seat.ts  wl_shm.js  wl_shm.ts  wl_shm_pool.js  wl_shm_pool.ts  wl_subcompositor.ts  wl_surface.js  wl_surface.ts  xdg_popup.ts  xdg_positioner.ts  xdg_surface.js  xdg_surface.ts  xdg_toplevel.js  xdg_toplevel.ts  xdg_wm_base.js  xdg_wm_base.ts  zwp_linux_buffer_params_v1.js  zwp_linux_buffer_params_v1.ts  zwp_linux_dmabuf_v1.js  zwp_linux_dmabuf_v1.ts
src/runtime/: wayland-types.d.ts
src/wm/: index.js  index.ts  placement.js  placement.ts
test/: action-registry.test.js  animations-broker.test.js  animations-evaluator.test.js  backdrop-blur.gpu.mjs  binding-chain-release.test.js  binding-chain.test.js  buffer-transform.gpu.mjs  bus-bridge.test.js  client-buffer-lifecycle.test.js  clipboard-test-client.c  clipboard.gpu.mjs  closing-animation.gpu.mjs  color-client.c  commit-timing.gpu.mjs  commit-timing.test.js  compose-worker-live.gpu.mjs  compose-worker.gpu.mjs  compose.gpu.mjs  composite-scissor-kms.gpu.mjs  composite-scissor.gpu.mjs  compositing-eyeball.mjs  compositing.gpu.mjs  compositor-fx.gpu.mjs  compositor-introspect.gpu.mjs  compositor-shape.gpu.mjs  config.test.js  cross-output-move.test.js  cursor-kinematics.test.js  cursor-rule-engine.test.js  cursor-scissor-scale.gpu.mjs  cursor-sdk.gpu.mjs  cursor-set-cursor.gpu.mjs  cursor-shape.gpu.mjs  cursor-shm-resize.gpu.mjs  cursor-theme.test.js  cursor.gpu.mjs  data-device-dnd.test.js  decoration-content-gate.test.js  decoration-e2e.test.js  decoration-occlusion.gpu.mjs  (+246 more)
test/fixtures/: wire-serial-probe.mjs  worker-gpu-bringup.mjs
test/fixtures/plugins/: actions-client.mjs  actions-server.mjs  closing-animation.mjs  compose-worker-live.mjs  compose-worker.mjs  console-log.mjs  cursor-rule.mjs  decoration-never-draws.mjs  decoration-provider.mjs  decoration-surface.mjs  events-echo.mjs  events-intercept.mjs  hot-loop.mjs  init-hang.mjs  init-reject.mjs  input-binder.mjs  intercept-invert-worker.mjs  intercept-invert.mjs  inthread-animation.mjs  inthread-config.mjs  inthread-mask.mjs  inthread-overlay.mjs  inthread-sdk-anim.mjs  inthread-throw.mjs  inthread-transitions.mjs  no-default.mjs  ns-activation.mjs  ns-client.mjs  ns-server.mjs  ok.mjs  oom.mjs  overlay-animated.mjs  overlay-onframe.mjs  overlay.mjs  relayout-snap.mjs  slow-shutdown.mjs  window-observer.mjs  windows-driver.mjs  worker-transitions-live.mjs  worker-transitions.mjs
test/layout-master-stack/: integration.test.js  master-stack.test.js
test/plugin-canvas/: canvas-drag-pan.gpu.mjs  canvas-elastic.gpu.mjs  canvas-fit.gpu.mjs  canvas-parity.gpu.mjs  canvas-placement.gpu.mjs  canvas-workarea.gpu.mjs  canvas-world.gpu.mjs  integration.test.js
test/plugin-decoration-default/: config.test.js  intercept.gpu.mjs  translucency.gpu.mjs
test/plugin-focus-default/: integration.test.js  policy.test.js
test/plugin-hotkey-default/: hotkey-7b.gpu.mjs  hotkey.gpu.mjs  integration.test.js  reload.test.js
test/plugin-layout-default/: integration.test.js  master-stack.test.js
test/plugin-window-rules/: preconfigure-wm.test.js  rules.test.js
test/plugin-workspace-default/: boot-initial-outputs.test.js  dynamic-workspaces.test.js  hotplug-migration.test.js  integration.test.js  output-name-resolution.test.js  preferred-outputs.test.js  recompute-outputs.test.js  registry.test.js  reorder.test.js  urgency.test.js  workspace-transition.gpu.mjs  workspaces.gpu.mjs
tools/: dawn_probe.cpp
tools/gen-protocol/: emit-dts.js  emit-js.js  gen-protocol.js
